; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_dvb.c_ParseModulation.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_dvb.c_ParseModulation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mod = type { [9 x i8], [7 x i8] }
%struct.mod.0 = type { i8*, i8* }

@ParseModulation.tab = internal constant [14 x %struct.mod] [%struct.mod { [9 x i8] c"8VSB\00\00\00\00\00", [7 x i8] c"8VSB\00\00\00" }, %struct.mod { [9 x i8] c"APSK_16\00\00", [7 x i8] c"16APSK\00" }, %struct.mod { [9 x i8] c"APSK_32\00\00", [7 x i8] c"32APSK\00" }, %struct.mod { [9 x i8] c"DQPSK\00\00\00\00", [7 x i8] c"DQPSK\00\00" }, %struct.mod { [9 x i8] c"PSK_8\00\00\00\00", [7 x i8] c"8PSK\00\00\00" }, %struct.mod { [9 x i8] c"QPSK\00\00\00\00\00", [7 x i8] c"QPSK\00\00\00" }, %struct.mod { [9 x i8] c"QAM_128\00\00", [7 x i8] c"128QAM\00" }, %struct.mod { [9 x i8] c"QAM_16\00\00\00", [7 x i8] c"16QAM\00\00" }, %struct.mod { [9 x i8] c"QAM_256\00\00", [7 x i8] c"256QAM\00" }, %struct.mod { [9 x i8] c"QAM_32\00\00\00", [7 x i8] c"32QAM\00\00" }, %struct.mod { [9 x i8] c"QAM_64\00\00\00", [7 x i8] c"64QAM\00\00" }, %struct.mod { [9 x i8] c"QAM_AUTO\00", [7 x i8] c"QAM\00\00\00\00" }, %struct.mod { [9 x i8] c"VSB_16\00\00\00", [7 x i8] c"16VSB\00\00" }, %struct.mod { [9 x i8] c"VSB_8\00\00\00\00", [7 x i8] c"8VSB\00\00\00" }], align 16
@cmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @ParseModulation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ParseModulation(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.mod*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %22

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* @cmp, align 4
  %11 = call %struct.mod.0* @bsearch(i8* %9, %struct.mod.0* bitcast ([14 x %struct.mod]* @ParseModulation.tab to %struct.mod.0*), i32 14, i32 16, i32 %10)
  %12 = bitcast %struct.mod.0* %11 to %struct.mod*
  store %struct.mod* %12, %struct.mod** %4, align 8
  %13 = load %struct.mod*, %struct.mod** %4, align 8
  %14 = icmp ne %struct.mod* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %8
  %16 = load %struct.mod*, %struct.mod** %4, align 8
  %17 = getelementptr inbounds %struct.mod, %struct.mod* %16, i32 0, i32 1
  %18 = getelementptr inbounds [7 x i8], [7 x i8]* %17, i64 0, i64 0
  br label %20

19:                                               ; preds = %8
  br label %20

20:                                               ; preds = %19, %15
  %21 = phi i8* [ %18, %15 ], [ null, %19 ]
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %20, %7
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local %struct.mod.0* @bsearch(i8*, %struct.mod.0*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
